2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Align divvy spaces to the "widest" type width.

	* divvy.c (make_space): Initialize the alignment of
	the newly created divvy space based on the "widest" type.

2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Tighten type of struct ‘divvy’ member ‘space’.

	* b-divvy.h (struct divvy): Declare ‘space’ to be ‘struct obstack *’.
	* b-divvy.c (make_space): Remove now-redundant cast to ‘struct obstack *’.

2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.93

2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Fix bug: Explicitly cast ‘size_t’ to ‘off_t’ for comparing.

	* b-fro.c (fro_spew_partial): Use ‘(off_t) sizeof (buf)’ to compare.

2010-08-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Work around x86_64-linux-gnu memory corruption problem.

	* ci.c (main): Call ‘getcurdate’ unconditionally, early on.

2010-08-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘bad_option’ more.

	* ident.c (main): Use ‘bad_option’.

2010-08-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Specify gnulib headers location when srcdir!=builddir.

	* Makefile.am (AM_CPPFLAGS): New var.

2010-08-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] #define _POSIX_SYMLOOP_MAX if necessary.

	* rcsedit.c (_POSIX_SYMLOOP_MAX):
	If not already defined, #define to 8.
	Reported by Mike Mestnik <mmestnik@nagios.com>.

2010-07-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int y-GROK] Use ‘exit_failurefully’ more.

	* yarrrr.c [TEST_GROK] (exiterr): Use ‘exit_failurefully’.

2010-07-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: exit_failurefully, exit_diff_trouble

	* rcsutil.c (exit_failurefully, exit_diff_trouble): New funcs.
	(runv): Use ‘exit_diff_trouble’.
	* base.h (exit_failurefully, exit_diff_trouble): New func decls.
	* ci.c (exiterr): Use ‘exit_failurefully’.
	* co.c (exiterr): Likewise.
	* ident.c (exiterr): Likewise.
	* rcs.c (exiterr): Likewise.
	* rcsclean.c (exiterr): Likewise.